sort OpenAPI scopes